// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`D16 motif geometry regression tesamorelin @ 280 — locked snapshot for share card parity 1`] = `
{
  "cx": 140,
  "cy": 140,
  "hash": 2820922562,
  "innerR": 50.4,
  "nodes": [
    {
      "bigDot": false,
      "x": 233.25,
      "x2": 185.7849,
      "y": 140,
      "y2": 152.268,
    },
    {
      "bigDot": false,
      "x": 218.5052,
      "x2": null,
      "y": 185.325,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 187.925,
      "x2": null,
      "y": 223.0085,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 140,
      "x2": 126.4896,
      "y": 234.55,
      "y2": 190.4213,
    },
    {
      "bigDot": false,
      "x": 92.075,
      "x2": null,
      "y": 223.0085,
      "y2": null,
    },
    {
      "bigDot": false,
      "x": 53.614,
      "x2": null,
      "y": 189.875,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 42.85,
      "x2": 94.2151,
      "y": 140,
      "y2": 127.732,
    },
    {
      "bigDot": true,
      "x": 53.614,
      "x2": null,
      "y": 90.125,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 92.725,
      "x2": null,
      "y": 58.1173,
      "y2": null,
    },
    {
      "bigDot": false,
      "x": 140,
      "x2": 153.8209,
      "y": 49.35,
      "y2": 88.4196,
    },
    {
      "bigDot": true,
      "x": 186.625,
      "x2": null,
      "y": 59.2431,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 218.5052,
      "x2": null,
      "y": 94.675,
      "y2": null,
    },
  ],
  "ringR": 95.2,
  "seedRingDash": "4 8",
  "seedRotation": -28,
}
`;

exports[`D16 motif geometry regression tesamorelin @ 200 (in-page default) — locked snapshot 1`] = `
{
  "cx": 100,
  "cy": 100,
  "hash": 2820922562,
  "innerR": 36,
  "nodes": [
    {
      "bigDot": false,
      "x": 166.05,
      "x2": 131.8756,
      "y": 100,
      "y2": 108.541,
    },
    {
      "bigDot": false,
      "x": 154.9493,
      "x2": null,
      "y": 131.725,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 134.325,
      "x2": null,
      "y": 159.4526,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 100,
      "x2": 90.2166,
      "y": 167.35,
      "y2": 136.512,
    },
    {
      "bigDot": false,
      "x": 65.675,
      "x2": null,
      "y": 159.4526,
      "y2": null,
    },
    {
      "bigDot": false,
      "x": 37.1699,
      "x2": null,
      "y": 136.275,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 30.05,
      "x2": 68.1244,
      "y": 100,
      "y2": 91.459,
    },
    {
      "bigDot": true,
      "x": 37.1699,
      "x2": null,
      "y": 63.725,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 66.325,
      "x2": null,
      "y": 41.6732,
      "y2": null,
    },
    {
      "bigDot": false,
      "x": 100,
      "x2": 110.0939,
      "y": 36.55,
      "y2": 62.3289,
    },
    {
      "bigDot": true,
      "x": 133.025,
      "x2": null,
      "y": 42.799,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 154.9493,
      "x2": null,
      "y": 68.275,
      "y2": null,
    },
  ],
  "ringR": 68,
  "seedRingDash": "4 8",
  "seedRotation": -28,
}
`;

exports[`D16 motif geometry regression bpc-157 @ 280 — distinct fingerprint, locked snapshot 1`] = `
{
  "cx": 140,
  "cy": 140,
  "hash": 3124799010,
  "innerR": 50.4,
  "nodes": [
    {
      "bigDot": false,
      "x": 233.25,
      "x2": 185.7849,
      "y": 140,
      "y2": 152.268,
    },
    {
      "bigDot": true,
      "x": 218.5052,
      "x2": null,
      "y": 185.325,
      "y2": null,
    },
    {
      "bigDot": false,
      "x": 186.625,
      "x2": null,
      "y": 220.7569,
      "y2": null,
    },
    {
      "bigDot": false,
      "x": 140,
      "x2": 127.4214,
      "y": 230.65,
      "y2": 186.944,
    },
    {
      "bigDot": false,
      "x": 90.775,
      "x2": null,
      "y": 225.2602,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 60.369,
      "x2": null,
      "y": 185.975,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 46.75,
      "x2": 94.2151,
      "y": 140,
      "y2": 127.732,
    },
    {
      "bigDot": false,
      "x": 59.2431,
      "x2": null,
      "y": 93.375,
      "y2": null,
    },
    {
      "bigDot": false,
      "x": 94.675,
      "x2": null,
      "y": 61.4948,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 140,
      "x2": 153.8209,
      "y": 49.35,
      "y2": 88.4196,
    },
    {
      "bigDot": false,
      "x": 187.925,
      "x2": null,
      "y": 56.9915,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 219.631,
      "x2": null,
      "y": 94.025,
      "y2": null,
    },
  ],
  "ringR": 95.2,
  "seedRingDash": "4 6",
  "seedRotation": -50,
}
`;

exports[`D16 motif geometry regression ss-31 @ 280 — distinct fingerprint, locked snapshot 1`] = `
{
  "cx": 140,
  "cy": 140,
  "hash": 1375365886,
  "innerR": 50.4,
  "nodes": [
    {
      "bigDot": true,
      "x": 238.45,
      "x2": 190.4213,
      "y": 140,
      "y2": 153.5104,
    },
    {
      "bigDot": true,
      "x": 226.386,
      "x2": null,
      "y": 189.875,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 189.875,
      "x2": null,
      "y": 226.386,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 140,
      "x2": 126.1791,
      "y": 234.55,
      "y2": 191.5804,
    },
    {
      "bigDot": false,
      "x": 93.375,
      "x2": null,
      "y": 220.7569,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 59.2431,
      "x2": null,
      "y": 186.625,
      "y2": null,
    },
    {
      "bigDot": false,
      "x": 41.55,
      "x2": 89.5787,
      "y": 140,
      "y2": 126.4896,
    },
    {
      "bigDot": true,
      "x": 60.369,
      "x2": null,
      "y": 94.025,
      "y2": null,
    },
    {
      "bigDot": false,
      "x": 93.375,
      "x2": null,
      "y": 59.2431,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 140,
      "x2": 152.268,
      "y": 41.55,
      "y2": 94.2151,
    },
    {
      "bigDot": true,
      "x": 189.875,
      "x2": null,
      "y": 53.614,
      "y2": null,
    },
    {
      "bigDot": false,
      "x": 226.386,
      "x2": null,
      "y": 90.125,
      "y2": null,
    },
  ],
  "ringR": 95.2,
  "seedRingDash": "8 11",
  "seedRotation": 2,
}
`;
